# ffmpegEnc

./: README.md  configure.ac
src/: Makefile.am  fenc.cpp  fenc.h  ffmpegEnc.cpp  ffmpegThumb.cpp  ffmpegThumbAll.cpp  jnifenc.cpp  jnifenc.h  phpfenc.cpp  phpfenc.h  pythonfenc.cpp  pythonfenc.h
test/: JNITest.h  JNITest.java  README.md  t.ini  t.php  test.py
